# PancakeFramework

./: .gitignore  CLAUDE.md  README.md  README_CN.md  main.py  pyproject.toml
.github/workflows/: ci.yml  pr-check.yml  publish.yml
docs/: fix-report.md  tutorial.md
docs/superpowers/plans/: 2026-06-02-pancake-framework-fixes.md
docs/superpowers/specs/: 2026-06-07-dough-system-design.md
docs/tutorial/: README.md
docs/tutorial/en/: 01-quickstart.md  02-core-concepts.md  03-ioc.md  04-config.md  05-plugin-system.md  06-embed.md  07-mybatis.md  08-web.md  09-web-template.md  10-web-security.md  11-ai.md  12-redis.md  13-messaging.md  14-langgraph.md  15-remote.md  16-cui.md  17-gui.md  18-cli.md  README.md
docs/tutorial/zh/: 01-quickstart.md  02-core-concepts.md  03-ioc.md  04-config.md  05-plugin-system.md  06-embed.md  07-mybatis.md  08-web.md  09-web-template.md  10-web-security.md  11-ai.md  12-redis.md  13-messaging.md  14-langgraph.md  15-remote.md  16-cui.md  17-gui.md  18-cli.md  README.md
framework/: __init__.py  run.py
framework/initialize/: __init__.py  check_dlc.py  check_env.py  check_struct.py  print_ico.py
framework/oven/: __init__.py  default.py  muffin.py  pancake.py
framework/ovenware/: __init__.py  auto_inject.py  base.py  embed.py  external_plugin.py  langgraph.py  web.py
framework/ovenware/langgraph/: __init__.py  broker.py  core.py  ioc.py  lifecycle.py  remote.py
framework/ovenware/mybatis/: __init__.py  config.py  connection.py  mapper.py  sql_parser.py  wrapper.py
framework/resource/: __init__.py  xml_config.py  yml.py
framework/tool/: __init__.py  progress_show.py
pancake/: __init__.py  decorators.py  dough.py  registry.py
pancake/base/: __init__.py  configuration.py  struct.py
pancake/cli/: audit.py  config.py  misc.py  plugin.py  project.py
pancake/decorators/: __init__.py  bean.py  config.py  convert.py  inject.py  scope.py
pancake/factory/: __init__.py  dough_factory.py
pancake/ovenware/: broker.py  inject.py  redis_cache.py  web.py
pancake/ovenware/mybatis/: connection.py  mapper.py  wrapper.py
pancake/ovenware/web/: __init__.py  auth.py  controller.py  main.py  security.py
plugins/pancake-ai/: README.md  pyproject.toml
plugins/pancake-ai/config/: ai.yaml
plugins/pancake-ai/pancake_ai/: __init__.py  ai_model.py
plugins/pancake-cui/: README.md  pyproject.toml
plugins/pancake-cui/pancake_cui/: __init__.py  cui.py
plugins/pancake-embed/: README.md  pyproject.toml
plugins/pancake-gui/: README.md  pyproject.toml
plugins/pancake-gui/config/: gui.yaml
plugins/pancake-gui/pancake_gui/: __init__.py  gui.py
plugins/pancake-langgraph/: README.md  pyproject.toml
plugins/pancake-langgraph/config/: langgraph.yaml
plugins/pancake-langgraph/pancake_langgraph/: __init__.py  core.py
plugins/pancake-mybatis/: README.md  pyproject.toml
plugins/pancake-mybatis/config/: mybatis.yaml
plugins/pancake-mybatis/pancake_mybatis/: __init__.py  config.py  connection.py  dialect.py  mapper.py  migration.py  sql_parser.py  types.py
plugins/pancake-redis/: README.md  pyproject.toml
plugins/pancake-redis/config/: redis.yaml
plugins/pancake-redis/pancake_redis/: __init__.py  redis_cache.py
plugins/pancake-remote/: README.md  pyproject.toml
plugins/pancake-remote/config/: remote.yaml
plugins/pancake-remote/pancake_remote/: __init__.py  remote.py
plugins/pancake-web/: README.md
src/: controller.py  demo_all.py  demo_auto_inject.py  demo_ioc.py
src/mapper/: user_mapper.py
src/resource/yaml/: mybatis.yaml  service.yaml
tests/: conftest.py  test_base_classes.py  test_broker_state.py  test_decorators.py  test_dough_factory.py  test_dough_meta.py  test_integration.py  test_mapper_security.py  test_registry.py  test_sql_parser.py  test_type_decorators.py  test_yml.py
