[tool.poetry]
name = "pancake-ai"
version = "0.1.0"
description = "Pancake AI Plugin - AI 模型集成"
authors = ["drayee <1473443474@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pancake_ai"}]

[tool.poetry.dependencies]
python = "^3.10"
pancake_framework = ">=0.2.0"
openai = {version = "^1.0.0", optional = true}
google-genai = {version = "^1.0.0", optional = true}
tiktoken = {version = "^0.7.0", optional = true}

[tool.poetry.extras]
openai = ["openai"]
gemini = ["google-genai"]
tiktoken = ["tiktoken"]
all = ["openai", "google-genai", "tiktoken"]

[tool.poetry.plugins."pancake.plugins"]
ai_model = "pancake_ai:Main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
