[tool.poetry]
name = "pancake-embed"
version = "0.1.0"
description = "Pancake Embed Plugin - 零 import 机制，将所有装饰器注入 builtins"
authors = ["drayee <1473443474@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pancake_embed"}]

[tool.poetry.dependencies]
python = "^3.10"
pancake_framework = ">=0.2.0"

[tool.poetry.plugins."pancake.plugins"]
embed = "pancake_embed:Main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
