[tool.poetry]
name = "pancake-gui"
version = "0.1.0"
description = "Pancake GUI Plugin - Flet GUI 框架集成"
authors = ["drayee <1473443474@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pancake_gui"}]

[tool.poetry.dependencies]
python = "^3.10"
pancake_framework = ">=0.2.0"
flet = "^0.85.0"

[tool.poetry.plugins."pancake.plugins"]
gui = "pancake_gui:Main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
