[tool.poetry]
name = "pancake-langgraph"
version = "0.1.0"
description = "Pancake LangGraph Plugin - LangGraph 工作流集成"
authors = ["drayee <1473443474@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pancake_langgraph"}]

[tool.poetry.dependencies]
python = "^3.10"
pancake_framework = ">=0.2.0"
langgraph = "^1.1.10"

[tool.poetry.plugins."pancake.plugins"]
langgraph = "pancake_langgraph:Main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
