[tool.poetry]
name = "pancake-redis"
version = "0.1.0"
description = "Pancake Redis Plugin - Redis 缓存集成"
authors = ["drayee <1473443474@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pancake_redis"}]

[tool.poetry.dependencies]
python = "^3.10"
pancake_framework = ">=0.2.0"
redis = "^5.0.0"

[tool.poetry.plugins."pancake.plugins"]
redis = "pancake_redis:Main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
