[tool.poetry]
name = "pancake-remote"
version = "0.1.0"
description = "Pancake Remote Plugin - 远程调用集成"
authors = ["drayee <1473443474@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pancake_remote"}]

[tool.poetry.dependencies]
python = "^3.10"
pancake_framework = ">=0.2.0"
aiohttp = {version = "^3.9.0", optional = true}
grpcio = {version = "^1.60.0", optional = true}

[tool.poetry.extras]
http = ["aiohttp"]
grpc = ["grpcio"]
all = ["aiohttp", "grpcio"]

[tool.poetry.plugins."pancake.plugins"]
remote = "pancake_remote:Main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
